test/syntax/fail/causality/3.sync
let node f x = o where
  rec o = x + y
  and y = o + 2
